# pxpincher_ros

./: .gitlab-ci.yml  .travis.yml  README.md
pxpincher_camsim/: CMakeLists.txt  package.xml
pxpincher_camsim/cfg/: camsim_params.yaml
pxpincher_camsim/include/pxpincher_camsim/: cam_simulator.h  camera_model.h  visual_object.h
pxpincher_camsim/launch/: cam_simulator.launch
pxpincher_camsim/src/: cam_simulator.cpp  camera_model.cpp  main.cpp
pxpincher_comm/: CMakeLists.txt  package.xml
pxpincher_comm/include/pxpincher_comm/: CerealPort.h  codes.h  pxprotocol.h  serialcomm.h  servocompliance.h  servostatus.h  servotarget.h
pxpincher_comm/src/: CerealPort.cpp  pxprotocol.cpp  serialcomm.cpp  servocompliance.cpp  servostatus.cpp  servotarget.cpp
pxpincher_config/: CMakeLists.txt  package.xml
pxpincher_config/config/: camsim_params.yaml  controllers.yaml  pincher_arm.yaml  pxpincher_rviz.rviz
pxpincher_cpp/: CMakeLists.txt  package.xml
pxpincher_cpp/include/pxpincher_cpp/: misc.h  pxparameter.h  pxpincher.h  simulation.h
pxpincher_cpp/src/: main.cpp  pxparameter.cpp  pxpincher.cpp  simulation.cpp
pxpincher_description/: CMakeLists.txt  package.xml
pxpincher_description/camera/: calibration.ini  calibration.yml
pxpincher_description/scripts/: fake_joint_pub.py  test_joint_controller.py
pxpincher_description/urdf/: arm_hardware.xacro  arm_hardware.xacro~  pincher_arm.urdf.xacro  pincher_arm.urdf.xacro~  pincher_gripper.xacro
pxpincher_hardware/: CMakeLists.txt  package.xml
pxpincher_hardware/include/pxpincher_hardware/: misc.h  pxparameter.h  pxpincher.h  simulation.h
pxpincher_hardware/src/: main.cpp  pxparameter.cpp  pxpincher.cpp  simulation.cpp
pxpincher_launch/: CMakeLists.txt  package.xml
pxpincher_launch/launch/: pxp.launch  pxp_cam.launch  pxp_cam_sim.launch  pxp_rviz.launch  pxp_sim.launch
pxpincher_lib/: CMakeLists.txt  package.xml
pxpincher_lib/include/phantomx_lib/: kinematics.h  misc.h  phantomx_interface.h  types.h
pxpincher_lib/include/pxpincher_lib/: kinematics.h  misc.h  phantomx_interface.h  pxpincher_lib.h  types.h
pxpincher_lib/src/: kinematics.cpp  main.cpp  phantomx_interface.cpp  teach.cpp
pxpincher_msgs/: CMakeLists.txt  package.xml
pxpincher_msgs/msg/: pxpincher_diagnostic.msg
pxpincher_msgs/srv/: Relax.srv
