<?xml version="1.0"?>
<package>
  <name>pxpincher_launch</name>
  <version>0.0.1</version>
  <description>The pxpincher_launch package</description>

  <maintainer email="maximilian.kraemer@tu-dortmund.de">Maximilian Krämer</maintainer>
  <maintainer email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/rst-tu-dortmund</url>

  <author email="maximilian.kraemer@tu-dortmund.de">Maximilian Krämer</author>
  <author email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>pxpincher_comm</run_depend>
  <run_depend>pxpincher_config</run_depend>
  <run_depend>pxpincher_description</run_depend>
  <run_depend>pxpincher_hardware</run_depend>
  <run_depend>pxpincher_lib</run_depend>
  <run_depend>pxpincher_msgs</run_depend>
  <run_depend>usb_cam</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
